v5.0.0/llms/components/ix-select.md
# ix-select

> No component summary available.

## Documentation

- https://ix.siemens.io//docs/components/select/guide.md

## Figma IDs

- 42365:49989

## Related examples

- datepicker-locale
  - angular: [../../examples/angular-examples/src/preview-examples/datepicker-locale.html](../../examples/angular-examples/src/preview-examples/datepicker-locale.html), [../../examples/angular-examples/src/preview-examples/datepicker-locale.ts](../../examples/angular-examples/src/preview-examples/datepicker-locale.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/datepicker-locale.html](../../examples/angular-standalone-examples/src/preview-examples/datepicker-locale.html), [../../examples/angular-standalone-examples/src/preview-examples/datepicker-locale.ts](../../examples/angular-standalone-examples/src/preview-examples/datepicker-locale.ts)
  - html: [../../examples/html-examples/src/preview-examples/datepicker-locale.html](../../examples/html-examples/src/preview-examples/datepicker-locale.html)
  - react: [../../examples/react-examples/src/preview-examples/datepicker-locale.tsx](../../examples/react-examples/src/preview-examples/datepicker-locale.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/datepicker-locale.vue](../../examples/vue-examples/src/preview-examples/datepicker-locale.vue)
- form-layout-auto
  - angular: [../../examples/angular-examples/src/preview-examples/form-layout-auto.html](../../examples/angular-examples/src/preview-examples/form-layout-auto.html), [../../examples/angular-examples/src/preview-examples/form-layout-auto.ts](../../examples/angular-examples/src/preview-examples/form-layout-auto.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/form-layout-auto.html](../../examples/angular-standalone-examples/src/preview-examples/form-layout-auto.html), [../../examples/angular-standalone-examples/src/preview-examples/form-layout-auto.ts](../../examples/angular-standalone-examples/src/preview-examples/form-layout-auto.ts)
  - html: [../../examples/html-examples/src/preview-examples/form-layout-auto.html](../../examples/html-examples/src/preview-examples/form-layout-auto.html)
  - react: [../../examples/react-examples/src/preview-examples/form-layout-auto.tsx](../../examples/react-examples/src/preview-examples/form-layout-auto.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/form-layout-auto.vue](../../examples/vue-examples/src/preview-examples/form-layout-auto.vue)
- form-layout-grid
  - angular: [../../examples/angular-examples/src/preview-examples/form-layout-grid.css](../../examples/angular-examples/src/preview-examples/form-layout-grid.css), [../../examples/angular-examples/src/preview-examples/form-layout-grid.html](../../examples/angular-examples/src/preview-examples/form-layout-grid.html), [../../examples/angular-examples/src/preview-examples/form-layout-grid.ts](../../examples/angular-examples/src/preview-examples/form-layout-grid.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/form-layout-grid.css](../../examples/angular-standalone-examples/src/preview-examples/form-layout-grid.css), [../../examples/angular-standalone-examples/src/preview-examples/form-layout-grid.html](../../examples/angular-standalone-examples/src/preview-examples/form-layout-grid.html), [../../examples/angular-standalone-examples/src/preview-examples/form-layout-grid.ts](../../examples/angular-standalone-examples/src/preview-examples/form-layout-grid.ts)
  - html: [../../examples/html-examples/src/preview-examples/form-layout-grid.css](../../examples/html-examples/src/preview-examples/form-layout-grid.css), [../../examples/html-examples/src/preview-examples/form-layout-grid.html](../../examples/html-examples/src/preview-examples/form-layout-grid.html)
  - react: [../../examples/react-examples/src/preview-examples/form-layout-grid.scoped.css](../../examples/react-examples/src/preview-examples/form-layout-grid.scoped.css), [../../examples/react-examples/src/preview-examples/form-layout-grid.tsx](../../examples/react-examples/src/preview-examples/form-layout-grid.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/form-layout-grid.css](../../examples/vue-examples/src/preview-examples/form-layout-grid.css), [../../examples/vue-examples/src/preview-examples/form-layout-grid.vue](../../examples/vue-examples/src/preview-examples/form-layout-grid.vue)
- select
  - angular: [../../examples/angular-examples/src/preview-examples/select.ts](../../examples/angular-examples/src/preview-examples/select.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/select.ts](../../examples/angular-standalone-examples/src/preview-examples/select.ts)
  - html: [../../examples/html-examples/src/preview-examples/select.html](../../examples/html-examples/src/preview-examples/select.html)
  - react: [../../examples/react-examples/src/preview-examples/select.tsx](../../examples/react-examples/src/preview-examples/select.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/select.vue](../../examples/vue-examples/src/preview-examples/select.vue)
- select-editable
  - angular: [../../examples/angular-examples/src/preview-examples/select-editable.ts](../../examples/angular-examples/src/preview-examples/select-editable.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/select-editable.ts](../../examples/angular-standalone-examples/src/preview-examples/select-editable.ts)
  - html: [../../examples/html-examples/src/preview-examples/select-editable.html](../../examples/html-examples/src/preview-examples/select-editable.html)
  - react: [../../examples/react-examples/src/preview-examples/select-editable.tsx](../../examples/react-examples/src/preview-examples/select-editable.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/select-editable.vue](../../examples/vue-examples/src/preview-examples/select-editable.vue)
- select-multiple
  - angular: [../../examples/angular-examples/src/preview-examples/select-multiple.ts](../../examples/angular-examples/src/preview-examples/select-multiple.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/select-multiple.ts](../../examples/angular-standalone-examples/src/preview-examples/select-multiple.ts)
  - html: [../../examples/html-examples/src/preview-examples/select-multiple.html](../../examples/html-examples/src/preview-examples/select-multiple.html)
  - react: [../../examples/react-examples/src/preview-examples/select-multiple.tsx](../../examples/react-examples/src/preview-examples/select-multiple.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/select-multiple.vue](../../examples/vue-examples/src/preview-examples/select-multiple.vue)
- select-validation
  - angular: [../../examples/angular-examples/src/preview-examples/select-validation.html](../../examples/angular-examples/src/preview-examples/select-validation.html), [../../examples/angular-examples/src/preview-examples/select-validation.ts](../../examples/angular-examples/src/preview-examples/select-validation.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/select-validation.html](../../examples/angular-standalone-examples/src/preview-examples/select-validation.html), [../../examples/angular-standalone-examples/src/preview-examples/select-validation.ts](../../examples/angular-standalone-examples/src/preview-examples/select-validation.ts)
  - html: [../../examples/html-examples/src/preview-examples/select-validation.html](../../examples/html-examples/src/preview-examples/select-validation.html)
  - react: [../../examples/react-examples/src/preview-examples/select-validation.tsx](../../examples/react-examples/src/preview-examples/select-validation.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/select-validation.vue](../../examples/vue-examples/src/preview-examples/select-validation.vue)
- theme-switcher
  - angular: [../../examples/angular-examples/src/preview-examples/theme-switcher.css](../../examples/angular-examples/src/preview-examples/theme-switcher.css), [../../examples/angular-examples/src/preview-examples/theme-switcher.html](../../examples/angular-examples/src/preview-examples/theme-switcher.html), [../../examples/angular-examples/src/preview-examples/theme-switcher.ts](../../examples/angular-examples/src/preview-examples/theme-switcher.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/theme-switcher.css](../../examples/angular-standalone-examples/src/preview-examples/theme-switcher.css), [../../examples/angular-standalone-examples/src/preview-examples/theme-switcher.html](../../examples/angular-standalone-examples/src/preview-examples/theme-switcher.html), [../../examples/angular-standalone-examples/src/preview-examples/theme-switcher.ts](../../examples/angular-standalone-examples/src/preview-examples/theme-switcher.ts)
  - html: [../../examples/html-examples/src/preview-examples/theme-switcher.css](../../examples/html-examples/src/preview-examples/theme-switcher.css), [../../examples/html-examples/src/preview-examples/theme-switcher.html](../../examples/html-examples/src/preview-examples/theme-switcher.html)
  - react: [../../examples/react-examples/src/preview-examples/theme-switcher.scoped.css](../../examples/react-examples/src/preview-examples/theme-switcher.scoped.css), [../../examples/react-examples/src/preview-examples/theme-switcher.tsx](../../examples/react-examples/src/preview-examples/theme-switcher.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/theme-switcher.css](../../examples/vue-examples/src/preview-examples/theme-switcher.css), [../../examples/vue-examples/src/preview-examples/theme-switcher.vue](../../examples/vue-examples/src/preview-examples/theme-switcher.vue)
- validation-select
  - angular: [../../examples/angular-examples/src/preview-examples/validation-select.html](../../examples/angular-examples/src/preview-examples/validation-select.html), [../../examples/angular-examples/src/preview-examples/validation-select.ts](../../examples/angular-examples/src/preview-examples/validation-select.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/validation-select.html](../../examples/angular-standalone-examples/src/preview-examples/validation-select.html), [../../examples/angular-standalone-examples/src/preview-examples/validation-select.ts](../../examples/angular-standalone-examples/src/preview-examples/validation-select.ts)
  - html: [../../examples/html-examples/src/preview-examples/validation-select.html](../../examples/html-examples/src/preview-examples/validation-select.html)
  - react: [../../examples/react-examples/src/preview-examples/validation-select.tsx](../../examples/react-examples/src/preview-examples/validation-select.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/validation-select.vue](../../examples/vue-examples/src/preview-examples/validation-select.vue)

## Related blocks

- unavailable (not present in registry JSON)

## Properties

- `allowClear`; attr: `allow-clear`; type: `boolean`; default: `false` - Show clear button
- `ariaLabelAddItem`; attr: `aria-label-add-item`; type: `string`; default: `'Add item'` - ARIA label for the add item
- `ariaLabelClearIconButton`; attr: `aria-label-clear-icon-button`; type: `string | undefined`; default: `'Clear selection'` - ARIA label for the clear icon button Will be set as aria-label on the nested HTML button element
- `collapseMultipleSelection`; attr: `collapse-multiple-selection`; type: `boolean`; default: `false` - Show "all" chip when all items are selected in multiple mode
- `disabled`; attr: `disabled`; type: `boolean`; default: `false` - If true the select will be in disabled state
- `dropdownMaxWidth`; attr: `dropdown-max-width`; type: `string | undefined` - The maximum width of the dropdown element with value and unit (e.g. "200px" or "12.5rem"). By default the maximum width of the dropdown element is set to 100%.
- `dropdownWidth`; attr: `dropdown-width`; type: `string | undefined` - The width of the dropdown element with value and unit (e.g. "200px" or "12.5rem").
- `editable`; attr: `editable`; type: `boolean`; default: `false` - Select is extendable
- `enableTopLayer`; attr: `enable-top-layer`; type: `boolean`; default: `false` - Enable Popover API rendering for dropdown.
- `helperText`; attr: `helper-text`; type: `string | undefined` - Helper text for the select component
- `hideListHeader`; attr: `hide-list-header`; type: `boolean`; default: `false` - Hide list header
- `i18nAllSelected`; attr: `i18n-all-selected`; type: `string`; default: `'All'` - Chip label for all selected items in multiple mode.
- `i18nNoMatches`; attr: `i18n-no-matches`; type: `string`; default: `'No matches'` - Information inside of dropdown if no items where found with current filter text
- `i18nPlaceholder`; attr: `i18n-placeholder`; type: `string`; default: `'Select an option'` - Input field placeholder
- `i18nPlaceholderEditable`; attr: `i18n-placeholder-editable`; type: `string`; default: `'Type of select option'` - Input field placeholder for editable select
- `i18nRemoveSelectedItem`; attr: `i18n-remove-selected-item`; type: `string`; default: `'Remove'` - Prefix for the accessible name of the close control on a selected chip in multiple mode. The chip label or value is appended (e.g. "Remove Item 1").
- `i18nSelectListHeader`; attr: `i18n-select-list-header`; type: `string`; default: `'Select an option'` - Select list header
- `infoText`; attr: `info-text`; type: `string | undefined` - Info text for the select component
- `invalidText`; attr: `invalid-text`; type: `string | undefined` - Error text for the select component
- `label`; attr: `label`; type: `string | undefined` - Label for the select component
- `mode`; attr: `mode`; type: `"multiple" | "single"`; default: `'single'` - Selection mode
- `name`; attr: `name`; type: `string | undefined` - A string that represents the element's name attribute, containing a name that identifies the element when submitting the form.
- `readonly`; attr: `readonly`; type: `boolean`; default: `false` - If true the select will be in readonly mode
- `required`; attr: `required`; type: `boolean`; default: `false` - A Boolean attribute indicating that an option with a non-empty string value must be selected
- `showTextAsTooltip`; attr: `show-text-as-tooltip`; type: `boolean | undefined` - Show helper, error, info, warning text as tooltip
- `validText`; attr: `valid-text`; type: `string | undefined` - Valid text for the select component
- `value`; attr: `value`; type: `string | string[]`; default: `''` - Current selected value. This corresponds to the value property of ix-select-items
- `warningText`; attr: `warning-text`; type: `string | undefined` - Warning text for the select component

## Events

- `addItem` - Item added to selection
- `inputChange` - Event dispatched whenever the text input changes.
- `ixBlur` - Blur input
- `valueChange` - Value changed

## Slots

- None
